--- a/style.css
+++ b/style.css
@@ -69,11 +69,28 @@
     height: 400px;
     border: 1px solid #000;
 }
+#profile .p1 .p1_b img{
+    margin-left: 18px;
+    width: 120px; height: 100px;
+}
+#profile .p1 img{
+    margin-top: 50px;
+    width: 140px;height: 100px;
+}
+#profile .p2 h2{
+    margin-top: 80px;
+    font-size: 35px;
+}
+
 #profile .p2{
     float: right;
     width: 800px;
     height: 400px;
     border: 1px solid #000;
+    text-align: center;
+}
+#profile .p2 p{
+    margin-top: 70px;
 }
 #skill{
     display: flex;
@@ -108,7 +125,7 @@
     gap: 40px;
 }
 #skill .in_skill .per{
-        margin-top: 60px;
+    margin-top: 60px;
     float: left;
     position: relative;
     width: 220px;
@@ -189,30 +206,6 @@
     /* 360deg / 100 = 3.6 */
     animation: animateDot 2s linear forwards;
 }
-#skill .in_skill .dot1
-{
-    position: absolute;
-    inset: 5px;
-    z-index: 10;
-    /* 360deg / 100 = 3.6 */
-    animation: animateDot 2s linear forwards;
-}
-#skill .in_skill .dot2
-{
-    position: absolute;
-    inset: 5px;
-    z-index: 10;
-    /* 360deg / 100 = 3.6 */
-    animation: animateDot 2s linear forwards;
-}
-#skill .in_skill .dot3
-{
-    position: absolute;
-    inset: 5px;
-    z-index: 10;
-    /* 360deg / 100 = 3.6 */
-    animation: animateDot 2s linear forwards;
-}
 @keyframes animateDot
 {
     0%
@@ -225,8 +218,7 @@
     }
 }
 
-#skill .in_skill .dot::before,
- .dot1::before, .dot2::before, .dot3::before
+#skill .in_skill .dot::before
 {
     content:'';
     position: absolute;
@@ -254,7 +246,9 @@
     animation: fadeIn 1s linear forwards;
     animation-delay: 1.5s;
 }
-
+#skill .in_skill .number p{
+    font-size: 20px;
+}
 
 
 
