--- a/style.css
+++ b/style.css
@@ -299,6 +299,11 @@
     width: 300px;height: 300px;
     background-color: #309ad3;
     color: white;
+    transition: all 0.2s linear;
+}
+#project .list .pro1:hover{
+    transform: scale(1.04);
+    z-index: 3;
 }
 #project .list .pro1 span{
     margin-left: 50px;
