--- a/style.css
+++ b/style.css
@@ -358,12 +358,13 @@
     background-color: #6ac76a;
     transition: all 0.2s linear;
 }
-#project .list .pro3 span{
+#project .list  span{
     margin-left: 20px;
     font-size: 70px;
     line-height: 180px;
+    color: white;
 }
-#project .list .pro3 p{
+#project .list p{
     margin-top: 10px;
     font-size: 14px;
     text-align: end;
@@ -393,13 +394,28 @@
     margin-left:300px;
     float: left;
     width: 300px;height: 300px;
-    background-color: #BFBFBF;
+    background-color: blue
+}
+
+#project .list .pro5 span{
+    font-size: 40px;
+}
+#project .list .pro5 p{
+    color: white;
+    margin-top: 5px;
 }
 #project .list .pro6{
     float: left;
     margin-left: -90px;
     width: 300px;height: 300px;border-radius: 50%;
     background-color: #ffffff;
+}
+#project .list .pro6 p{
+    text-align: center;
+    line-height: 80px;
+    font-size: 20px;
+    color: rgb(19, 16, 16);
+    font-weight: 700;
 }
 #project .list .pro7{
     position: relative;
