--- a/style.css
+++ b/style.css
@@ -88,8 +88,8 @@
 }
 #profile .p2 .p1_1 .img{
     margin-top: 15px;
-    width: 300px; height: 200px;
-    background-color: #2c0f0f;
+    width: 300px; height: 100px;
+    background-color: #ecebe3;
 }
 #profile .p2 .p1_1 .name{
     font-size: 30px;
@@ -320,26 +320,16 @@
     float: left;
     margin-left: -90px;
     width: 290px;height: 290px;border-radius: 50%;
-    background-color: #020202;
+    background-color: white;
     border: 5px solid #C13E3E;
 }
 #project .list .pro2 p{
     text-align: center;
     margin-top: 53px;
+    margin-left: 15px;
     font-size: 20px;
-    color: white;
-}
-#project .list .pro2 span{
-    display: none;
-}
-#project .list .pro2:hover{
-   background-color: white;
-   transition-duration: 0.3s;
-   color: black;
-   
-}
-#project .list .pro2:hover p{
-    display: none;
+    color: black;
+    font-weight: 700;
 }
 #project .list .pro2:hover span{
     font-size: 15px;
@@ -374,7 +364,7 @@
     transform: scale(1.04);
     z-index: 3;
 }
-#project .list .pro4{
+#project .list .pro4, .pro6, .pro8{
     float: left;
     margin-left: -90px;
     width: 290px;height: 290px;border-radius: 50%;
@@ -394,21 +384,21 @@
     margin-left:300px;
     float: left;
     width: 300px;height: 300px;
-    background-color: blue
+    background-color: blue;
+    transition: all 0.2s linear;
 }
 
 #project .list .pro5 span{
     font-size: 40px;
 }
+
+#project .list .pro5:hover{
+    transform: scale(1.04);
+    z-index: 3;
+}
 #project .list .pro5 p{
     color: white;
     margin-top: 5px;
-}
-#project .list .pro6{
-    float: left;
-    margin-left: -90px;
-    width: 300px;height: 300px;border-radius: 50%;
-    background-color: #ffffff;
 }
 #project .list .pro6 p{
     text-align: center;
@@ -424,12 +414,6 @@
     margin-left: 90px;
     width: 300px;height: 300px;
     background-color: #BFBFBF;
-}
-#project .list .pro8{
-    float: left;
-    margin-left: -90px;
-    width: 300px;height: 300px;border-radius: 50%;
-    background-color: #ffffff;
 }
 #end{
     display: flex;
